--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Enki Corbin
-logo: /assets/img/logo.png
+logo: /assets/img/logo.jpg
 description: Développeur mobile et web
 #show_downloads: true
 theme: jekyll-theme-minimal
