--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Enki Corbin
 logo: /assets/imgs/logo.jpg
-description: Développeur mobile et web
+description: Développeur FullStack
 #show_downloads: true
 theme: jekyll-theme-minimal
